# importer

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt  setup.py
importer/: defaults.py  fileproc.py  inputdir.py  main.py  remote.py  statuscb.py
